package at.htl.entity;public class Customer {
}
